--- a/CrossSync.AspNetCore/CrossSync.AspNetCore.csproj
+++ b/CrossSync.AspNetCore/CrossSync.AspNetCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>CrossSync.AspNetCore</AssemblyName>
     <RootNamespace>CrossSync.AspNetCore</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -17,8 +17,8 @@ It also provides an abstraction to API controllers which encapsulate base servic
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="5.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.1.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
