--- a/CrossSync.Infrastructure.Server/CrossSync.Infrastructure.Server.csproj
+++ b/CrossSync.Infrastructure.Server/CrossSync.Infrastructure.Server.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>CrossSync.Infrastructure.Server</AssemblyName>
     <RootNamespace>CrossSync.Infrastructure.Server</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="5.1.0" />
+    <PackageReference Include="MediatR" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
