--- a/CrossSync.Xamarin.DependencyInjection/CrossSync.Xamarin.DependencyInjection.csproj
+++ b/CrossSync.Xamarin.DependencyInjection/CrossSync.Xamarin.DependencyInjection.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>CrossSync.Xamarin.DependencyInjection</AssemblyName>
     <RootNamespace>CrossSync.Xamarin.DependencyInjection</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Autofac" Version="6.4.0" />
   </ItemGroup>
 
 </Project>
