--- a/Sample.Maui/Sample.Maui.csproj
+++ b/Sample.Maui/Sample.Maui.csproj
@@ -49,7 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="6.0.10" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.10" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -58,5 +58,7 @@
 	</ItemGroup>
 
 	<Import Project="..\Sample.TodoList.Entities.Shared\Sample.TodoList.Entities.Shared.projitems" Label="Shared" />
+
+	<ProjectExtensions><VisualStudio><UserProperties XamarinHotReloadDebuggerTimeoutExceptionSampleMauiHideInfoBar="True" /></VisualStudio></ProjectExtensions>
 
 </Project>
