--- a/CrossSync.Maui/CrossSync.Maui.csproj
+++ b/CrossSync.Maui/CrossSync.Maui.csproj
@@ -17,6 +17,9 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\CrossSync.Infrastructure.Client\CrossSync.Infrastructure.Client.csproj" />
 	</ItemGroup>
