--- a/CrossSync.Infrastructure.Client/CrossSync.Infrastructure.Client.csproj
+++ b/CrossSync.Infrastructure.Client/CrossSync.Infrastructure.Client.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>CrossSync.Infrastructure.Client</AssemblyName>
     <RootNamespace>CrossSync.Infrastructure.Client</RootNamespace>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -17,7 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
