--- a/CrossSync.Maui/CrossSync.Maui.csproj
+++ b/CrossSync.Maui/CrossSync.Maui.csproj
@@ -35,6 +35,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 	  <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.40" />
 	  <PackageReference Include="Sentry" Version="4.9.0" />
